# llm-adapters

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  GETTING_STARTED_RUST.md  MIGRATION_TO_RUST.md  PHASE_1_SUMMARY.md  README.md  README_RUST.md  RUST_PORT_STATUS.md  pyproject.toml
adapters/: types.py
adapters/abstract_adapters/: sdk_chat_adapter.py
adapters/provider_adapters/: cohere_sdk_chat_provider_adapter.py
config/: models_api.json  models_api.toml  paras_config.toml  provider_defaults.toml  pure_api_config.toml  vendor_mappings.toml
docs/: architecture.md  rust_port_design.md
examples/: conversation_builder.rs  filter_models.rs  list_models.rs
src/: error.rs  lib.rs
src/adapters/: base.rs  factory.rs  mod.rs
src/config/: env.rs  mod.rs  provider_defaults.rs  vendor_mappings.rs
src/http/: cache.rs  client.rs  mod.rs
src/models/: conversation.rs  cost.rs  mod.rs  model.rs  modelsdev.rs  response.rs
src/utils/: images.rs  mod.rs  normalization.rs
tests/: integration_test.rs  utils.py
tooling/: cli.py
