[tool.poetry]
name = "martian-adapters-rust"
version = "0.0.0"
description = "Tooling support for the martian-adapters Rust project"
authors = ["Martian AI <team@withmartian.com>"]
package-mode = false
packages = [{ include = "tooling", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
ruff = "tooling.cli:run_ruff"
mypy = "tooling.cli:run_mypy"
pytest = "tooling.cli:run_pytest"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
